# falcon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  list.txt
cmake/: ExternalAntlr4Cpp.cmake
src/: BinarySearch.cpp  CMakeLists.txt  antlr4demo.cpp  any_visitor.cpp  any_visitor.h  csv_file_scanner.cpp  csv_file_scanner.h  csv_query.cpp  expression.cpp  expression.h  filestream.cpp  filter.cpp  filter.h  hash_aggregator.cpp  hash_aggregator.h  iostream  iostream.cpp  iterator.cpp  iterator.h  limiter.cpp  limiter.h  metadata.h  opt_n_any.cpp  projector.cpp  projector.h  readLine.cpp  sequencer.cpp  sequencer.h  sortedArrayToBST.cpp  to_any_converter.cpp  to_any_converter.h
test/: CMakeLists.txt  CsvFileScannerTest.cpp  any_converter_test.cpp  any_visitor_test.cpp  conversion_test.cpp  csv_file_scanner_test.cpp  different_fields.csv  different_fields.txt  expression_test.cpp  filter_test.cpp  hash_aggregator_test.cpp  invalid_data.csv  limiter_test.cpp  metadata.txt  metadata2.txt  metadata_test.cpp  mock_scanner.h  projector_test.cpp  sequencer_test.cpp  util.cpp  util.h
test/data/: data.csv  data1.csv  data2.csv  data_basic_test.csv  different_fields.csv  different_fields1.csv  different_fields1.txt  different_fields2.csv  different_fields2.txt  different_fields3.csv  different_fields3.txt  empty_fields_data.csv  empty_fields_metadata.txt  fileScanner_filter_test.csv  fileScanner_filter_test.txt  invalid_metadata.txt  metadata.txt  metadata1.txt  metadata_basic_test.txt  projector.csv  projector.txt
